kubernetes/mongo-express/mongo-express/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo-express-service
    namespace: mongo-app
spec:
    selector:
        app: mongo-express
    # ------ make service external
    type: LoadBalancer # it will assign external IP address
    # ---------------------------
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
          # ------ make service external
          nodePort: 30000 # make IP address external; must be from range 30000-32767
          # ---------------------------
