kubernetes/mongo-express/mongo-express/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: mongo-express-ingress
    namespace: mongo-app
spec:
    rules:
    - host: mongo-internal.com
      http:
          paths:
          - backend:
              serviceName: mongo-express-service
              servicePort: 8081
